# display-control

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.am  NEWS  README.codestyle  README.md  README.osx  cmake_config.h.in  configure.ac  display-control.cpp  display-control.h
m4/: display_control_version.m4
po/: LINGUAS  POTFILES.in  display-control.pot  en.po  en@boldquot.po  en@quot.po  es.po  it.po
src/: CFTypeGuard.cpp  CFTypeGuard.h  display-control.cpp  display.cpp  display.h  display_control.cpp  display_control.h  display_user_settings.cpp  display_user_settings.h  filesystem.cpp  filesystem.h  gettext_defs.h  object-guard.h  object_guard.h  service_guard.h
